--- a/src/main/webapp/less/index.less
+++ b/src/main/webapp/less/index.less
@@ -14,6 +14,7 @@ li{
 }
 
 @toppicColor:#246c9b;
+@buttonColor:#9fbdd2;
 
 .nav{
     height: 40px;
@@ -32,5 +33,48 @@ li{
     .rightNav{
         float: right;
         margin-right: 40px;
+    }
+}
+
+// 表单去表格样式
+.inputNoBorder(){
+    padding: 5px;
+    border:none;
+    outline:none;
+}
+
+.topHandle{
+    margin: 16px auto;
+    width: 1200px;
+    >div{
+        display: inline-block;
+    }
+    .topLogo{
+        img{
+            float: left;
+            height: 32px;
+        }
+        span{
+            margin-left: 10px;
+            font-size: 24px;
+            color: @toppicColor;
+        }
+    }
+    .searchGoods{
+        float: right;
+        border: 1px solid @toppicColor;
+        border-radius: 5px;
+        input{
+            .inputNoBorder;
+        }
+    }
+    .mainHandle{
+        float: right;
+        button{
+            .inputNoBorder;
+            border-radius: 5px;
+            color: rgb(255,255,255);
+            background-color: @buttonColor;
+        }
     }
 }
