流星动画实现

--- a/src/main/webapp/less/log.less
+++ b/src/main/webapp/less/log.less
@@ -71,9 +71,9 @@ button{
         position: fixed;
     }
     .meteor{
-        top: 10px;
-        right: 10px;
-        animation: meteorMove 1s linear 0s infinite none;
+        // top: 10px;
+        // right: 10px;
+        // animation: meteorMove 1s linear 0s infinite none;
     }
     .shine1{
         animation:starShine 4s linear 0s infinite none;
@@ -86,24 +86,24 @@ button{
     }
 }
 
-@moveLength:40px;
-@keyframes meteorMove{
-    0%{
-        top: 10px;
-        right: 10px;
-        opacity: 0;
-    }
-    50%{
-        top: 10px+@moveLength;
-        right: 10px+@moveLength;
-        opacity: 1;
-    }
-    100%{
-        top: 10+2*@moveLength;
-        right: 10px+2*@moveLength;
-        opacity: 0;
-    }
-}
+// @moveLength:40px;
+// @keyframes meteorMove{
+//     0%{
+//         top: 10px;
+//         right: 10px;
+//         opacity: 0;
+//     }
+//     50%{
+//         top: 10px+@moveLength;
+//         right: 10px+@moveLength;
+//         opacity: 1;
+//     }
+//     100%{
+//         top: 10+2*@moveLength;
+//         right: 10px+2*@moveLength;
+//         opacity: 0;
+//     }
+// }
 
 @keyframes starShine{
     0%{
