--- a/src/main/webapp/less/log.less
+++ b/src/main/webapp/less/log.less
@@ -347,6 +347,7 @@ button{
                     color: @inputFontColor;
                 }
             }
+            //输入框右侧图片
             img{
                 position: absolute;
                 right: 10px;
