部分样式修改

--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -73,7 +73,7 @@ a {
   padding: 2px 8px;
   margin: 0 10px;
   color: #ffffff;
-  background-color: #9fbdd2;
+  background-color: rgba(246, 146, 138, 0.5);
 }
 .banner {
   position: relative;
@@ -99,10 +99,9 @@ a {
   display: inline-block;
 }
 .banner .menuwrap .allClassify ul {
-  display: none;
   position: absolute;
   text-align: center;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 .banner .menuwrap .allClassify ul li {
   width: 100%;
@@ -149,7 +148,7 @@ main .perfectGoods {
 }
 main .perfectGoods h2 {
   text-align: center;
-  color: #246c9b;
+  color: rgba(246, 146, 138, 0.5);
 }
 main .perfectGoods .leftHandle,
 main .perfectGoods .rightHandle {
@@ -183,7 +182,7 @@ main .perfectGoods .perfectList .perfectContent p {
   margin: 4px 0px;
 }
 main .perfectGoods .perfectList .perfectContent:hover {
-  border: 2px solid #246c9b;
+  border: 2px solid rgba(246, 146, 138, 0.5);
 }
 main .banner img {
   width: 100%;
