--- a/src/main/webapp/less/index.less
+++ b/src/main/webapp/less/index.less
@@ -23,7 +23,7 @@ a{
 }
 
 @toppicColor:#246c9b;
-@topInputColor:#9fbdd2;
+@topInputColor:rgba(246,146,138,.5);
 @borderColor:rgba(102,102,102,.5);
 .topContainer{
     border-bottom: 1px solid @borderColor;
@@ -116,10 +116,9 @@ a{
                 display: inline-block;
             }
             ul{
-                display: none;
                 position: absolute;
                 text-align: center;
-                background-color: rgba(255,255,255,.5);
+                background-color: rgba(255,255,255,.8);
                 li{
                     width: 100%;
                     padding: 10px 0px;
@@ -144,7 +143,7 @@ a{
 }
 
 
-@perfectColor:#246c9b;
+@perfectColor:rgba(246,146,138,.5);
 main{
     margin: 16px auto;
     width: 1100px;
