--- a/src/main/webapp/less/log.less
+++ b/src/main/webapp/less/log.less
@@ -1,7 +1,7 @@
 body{
     margin: 0px;
     padding: 0px;
-    background: url(../img/blueBg.png);
+    background: url(../img/log/blueBg.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     background-attachment: fixed;
