--- a/src/main/webapp/less/index.less
+++ b/src/main/webapp/less/index.less
@@ -95,7 +95,7 @@ a{
     }
 }
 
-.banner{
+.topBanner{
     position: relative;
     .menuwrap{
         margin-left: 100px;
@@ -172,50 +172,80 @@ main{
         }
     }
 
+    // 左右箭头
+    .leftHandle,.rightHandle{
+        position: absolute;
+        top: 50%;
+        font-size: 40px;
+    }
+    .leftHandle{
+        left: 10px;
+    }
+    .rightHandle{
+        right: 10px;
+    }
+
+
+    
+    .goodsList{
+        position: relative;
+        text-align: center;
+        margin: 0px 60px;
+        //每个具体块的布局
+        .concreteContent{
+            display: inline-block;
+            width: 20%;
+            height: 300px;
+            margin: 0px 20px;
+            border:1px solid rgba(102,102,102,.7);
+            img{
+                width: 100%;
+                height: 80%;
+            }
+            p{
+                margin: 4px 0px;
+            }
+            &:hover{
+                border: 2px solid @perfectColor;
+            }
+        }
+    }
+
     .perfectGoods{
         position: relative;
         h2{
             text-align: center;
             color: @perfectColor;
         }
-        .leftHandle,.rightHandle{
-            position: absolute;
-            top: 50%;
-            font-size: 40px;
-        }
-        .leftHandle{
-            left: 10px;
-        }
-        .rightHandle{
-            right: 10px;
-        }
-        .perfectList{
-            position: relative;
-            text-align: center;
-            margin: 0px 60px;
-            .perfectContent{
-                display: inline-block;
-                width: 20%;
-                height: 300px;
-                margin: 0px 20px;
-                border:1px solid rgba(102,102,102,.7);
-                img{
-                    width: 100%;
-                    height: 80%;
-                }
-                p{
-                    margin: 4px 0px;
-                }
-                &:hover{
-                    border: 2px solid @perfectColor;
-                }
-            }
-        }
     }
 
-    .banner{
-        img{
-            width: 100%;
+    .middleBanner{
+        width: 100%;
+        height: 224px;
+        margin: 40px 0px;
+        background-image: url('../img/index/banner.png');
+        background-size: cover;
+    }
+
+
+    .specialGoods{
+        position: relative;
+        .specialTitle{
+            div{
+                display: inline-block;
+                position: relative;
+                padding: 5px 40px;
+                color: @toppicColor;
+                background-color: rgba(204,204,204,.5);
+                >span:first-child{
+                    position: absolute;
+                    left: 0px;
+                    top: 0px;
+                    display: inline-block;
+                    color: #fff;
+                    background-color: @toppicColor;
+                }
+            }
         }
     }
 }
